--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,2 @@
-<div class="login-box">
-  <form class="form">
-    <h2 class="form-title">Log in</h2>
-
-    <div class="form_div">
-      <input type="text" class="form-input" placeholder=" " />
-      <label class="form_label">Username/Email</label>
-    </div>
-
-    <div class="form_div">
-      <input type="password" class="form-input" placeholder=" " />
-      <label class="form_label">password</label>
-    </div>
-
-    <button class="btn">Next</button>
-    <div class="links">
-      <div><a href="#">Forgot password</a></div>
-
-      <a href="#">Create New Account</a>
-    </div>
-  </form>
-</div>
+<app-login></app-login>
+<router-outlet></router-outlet>
