Fix routing and UI changes

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="login-box">
   <form class="form">
-    <h2 class="form-title">Log in</h2>
+    <h2 class="form-title">Register new User</h2>
 
     <div class="form_div">
       <input type="text" class="form-input" placeholder=" " />
@@ -33,7 +33,7 @@
     <div class="links">
       <div><a href="#">Forgot password</a></div>
 
-      <a routerLink="/">Back To Login</a>
+      <a routerLink="/login">Back To Login</a>
     </div>
   </form>
 </div>
