--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -24,7 +24,7 @@
   margin-bottom: 1rem;
   color: rgb(32, 80, 201);
 }
-.form_div {
+.form-div {
   position: relative;
   height: 48px;
   margin-bottom: 1.5rem;
@@ -42,7 +42,7 @@
   background: none;
   z-index: 1;
 }
-.form_label {
+.form-label {
   position: absolute;
   top: 0.85rem;
   left: 1rem;
