some changes with register

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,17 +8,15 @@
         <input
           id="User"
           formControlName="username"
-          type="text"
+          type="email"
           matInput
           placeholder="Ex. pat@example.com"
         />
-        <mat-hint>...@(yourmailbox).com</mat-hint>
       </mat-form-field>
 
       <mat-form-field class="">
         <mat-label>password</mat-label>
         <input id="Pass" formControlName="password" type="password" matInput />
-        <mat-hint></mat-hint>
       </mat-form-field>
 
       <button
