--- a/src/app/common/dialog/dialog.component.html
+++ b/src/app/common/dialog/dialog.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title [class]="data.class">{{ data.header }}</h1>
-<div mat-dialog-content>
+<h1 class="dialog" mat-dialog-title [class]="data.class">{{ data.header }}</h1>
+<div class="dialog" mat-dialog-content>
   {{ data.message }}
 </div>
-<div fxLayout="row" fxLayoutAlign="end center" mat-dialog-actions>
+<div class="button" mat-dialog-actions>
   <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
 </div>
