--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -4,6 +4,7 @@
 }
 
 .login-box {
+  background-color: white;
   display: flex;
   position: relative;
   top: 45vh;
@@ -13,6 +14,7 @@
 }
 .form {
   position: absolute;
+  background-color: white;
   width: 360px;
   padding: 4rem 2rem;
   border-radius: 1rem;
@@ -91,4 +93,16 @@
   text-decoration: none;
   font-size: 14px;
   color: rgb(32, 80, 201);
+}
+.gradient {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(
+    to right bottom,
+    #292e42,
+    #543a61,
+    #8e3d6a,
+    #c34459,
+    #e06332
+  );
 }
