--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,3 +19,9 @@
 .black-color {
   background-color: black !important;
 }
+.mat-drawer-container {
+  position: inherit;
+}
+.mar-64px {
+  margin-top: 64px;
+}
