--- a/src/app/components/dashboard/userlist/userlist.component.html
+++ b/src/app/components/dashboard/userlist/userlist.component.html
@@ -1,39 +1,69 @@
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+<div class="Table">
+  <table
+    matSort
+    (matSortChange)="sortData($event)"
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+  >
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ "USER_LIST.NAME" | translate }}
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by Name"
+      >
+        {{ "User_List.Name" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
     <ng-container matColumnDef="lastName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ "USER_LIST.SURNAME" | translate }}
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by Last Name"
+      >
+        {{ "User_List.LastName" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
     </ng-container>
     <ng-container matColumnDef="login">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ "USER_LIST.LOGIN" | translate }}
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by Login"
+      >
+        {{ "User_List.Login" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ element.login }}</td>
     </ng-container>
     <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ "USER_LIST.ROLE" | translate }}
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by Role"
+      >
+        {{ "User_List.Role" | translate }}
       </th>
       <td mat-cell *matCellDef="let element">{{ getRole(element.role) }}</td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>
         <div fxLayout="row" fxLayoutAlign="center center">
-          {{ "USER_LIST.ACTION" | translate }}
+          {{ "User_List.Action" | translate }}
         </div>
       </th>
       <td mat-cell *matCellDef="let element">
         <div fxLayout="row" fxLayoutAlign="center center">
-          <mat-icon (click)="onEdit()">edit</mat-icon>
-          <mat-icon (click)="onDelete()">delete</mat-icon>
+          <button>
+            <mat-icon (click)="onEdit()">edit</mat-icon>
+          </button>
+          <button>
+            <mat-icon (click)="onDelete()">delete</mat-icon>
+          </button>
         </div>
       </td>
     </ng-container>
